<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trifcdr.feedbacker.presentation.fragments.form.FormFragment">

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:text="@string/feedbacker"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center|center_vertical"
                    android:textColor="@color/black"/>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/diagram_bar_svgrepo_com"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanQr_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/scanQr"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/orText"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/orRegister"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/orText"
                android:background="#c0c0c0" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            app:shapeAppearance="@style/Rounded"
            android:layout_height="wrap_content"
            android:hint="@string/formId">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/telegram_svgrepo_com"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>